youfull/objects/SL_KPIConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Definition of a KPI for SalesLeaders, includes mappings to the Goal fields (on Leader_Title) and the Actual fields (on ALM_Rep_Performance)</description>
    <fields>
        <fullName>ActualField__c</fullName>
        <label>Actual Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseField__c</fullName>
        <label>Base Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomLabel__c</fullName>
        <label>Custom Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_To_Maximize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal To Maximize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanField__c</fullName>
        <label>Plan Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SL_KPIConfig</label>
</CustomObject>